--- a/fanqie-toms/trunk/pom.xml
+++ b/fanqie-toms/trunk/pom.xml
@@ -79,6 +79,16 @@
         <!--<version>3.0.0</version>-->
         <!--</dependency>-->
 
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.7.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>1.6.2.RELEASE</version>
+        </dependency>
         <!--poi 插件-->
         <dependency>
             <groupId>org.apache.poi</groupId>
