--- a/fanqie-toms/trunk/src/main/resources/config.properties
+++ b/fanqie-toms/trunk/src/main/resources/config.properties
@@ -19,4 +19,5 @@ ctrip.password=zhilianzhuanshu11!!
 
 weixin.openids=ogyI_t_fSCLYiAuPvrMsQHsWV-OI,ogyI_t_dpLcRmRxws4YfSHBewfGw,ogyI_tyJc9-68zHKcEqWFxG_LJTk,ogyI_t7HqwYlhxe7PBLqQuWjpxxM
 log.open=false
+redis.open=true
 threadNum=10
