信用住价格计划名称

--- a/fanqie-toms/trunk/src/main/resources/data.properties
+++ b/fanqie-toms/trunk/src/main/resources/data.properties
@@ -1,5 +1,6 @@
-tb.receiptOtherTypeDesc=如需发票,请在离店后一周内联系客服申请，发票寄送需要自付邮费
-tb.guide= 1、订单一经确认发货不退不换，由于客人原因导致的无法入住由客人自行承担产生的费用。2、如有特殊要求,请下单时备注或者联系旺旺,以旺旺聊天记录为准。3、入住时前台说查不到订单可能为系统原因导致，请及时联系本店客服，我们会为您妥善解决；4、如需发票，请在离店后1周内联系客服申请，逾期无法补开。发票寄送需要自付邮费,有疑问请旺旺联系客服。5、酒店通常14点办理入住,早到可能要等待；如需在0:00-6:00入住，入住日期请选择前1天。
-tb.ratePlanAdd=特价优惠+全额预付+无早
+tb.receiptOtherTypeDesc=\u5982\u9700\u53D1\u7968,\u8BF7\u5728\u79BB\u5E97\u540E\u4E00\u5468\u5185\u8054\u7CFB\u5BA2\u670D\u7533\u8BF7\uFF0C\u53D1\u7968\u5BC4\u9001\u9700\u8981\u81EA\u4ED8\u90AE\u8D39
+tb.guide= 1\u3001\u8BA2\u5355\u4E00\u7ECF\u786E\u8BA4\u53D1\u8D27\u4E0D\u9000\u4E0D\u6362\uFF0C\u7531\u4E8E\u5BA2\u4EBA\u539F\u56E0\u5BFC\u81F4\u7684\u65E0\u6CD5\u5165\u4F4F\u7531\u5BA2\u4EBA\u81EA\u884C\u627F\u62C5\u4EA7\u751F\u7684\u8D39\u7528\u30022\u3001\u5982\u6709\u7279\u6B8A\u8981\u6C42,\u8BF7\u4E0B\u5355\u65F6\u5907\u6CE8\u6216\u8005\u8054\u7CFB\u65FA\u65FA,\u4EE5\u65FA\u65FA\u804A\u5929\u8BB0\u5F55\u4E3A\u51C6\u30023\u3001\u5165\u4F4F\u65F6\u524D\u53F0\u8BF4\u67E5\u4E0D\u5230\u8BA2\u5355\u53EF\u80FD\u4E3A\u7CFB\u7EDF\u539F\u56E0\u5BFC\u81F4\uFF0C\u8BF7\u53CA\u65F6\u8054\u7CFB\u672C\u5E97\u5BA2\u670D\uFF0C\u6211\u4EEC\u4F1A\u4E3A\u60A8\u59A5\u5584\u89E3\u51B3\uFF1B4\u3001\u5982\u9700\u53D1\u7968\uFF0C\u8BF7\u5728\u79BB\u5E97\u540E1\u5468\u5185\u8054\u7CFB\u5BA2\u670D\u7533\u8BF7\uFF0C\u903E\u671F\u65E0\u6CD5\u8865\u5F00\u3002\u53D1\u7968\u5BC4\u9001\u9700\u8981\u81EA\u4ED8\u90AE\u8D39,\u6709\u7591\u95EE\u8BF7\u65FA\u65FA\u8054\u7CFB\u5BA2\u670D\u30025\u3001\u9152\u5E97\u901A\u5E3814\u70B9\u529E\u7406\u5165\u4F4F,\u65E9\u5230\u53EF\u80FD\u8981\u7B49\u5F85\uFF1B\u5982\u9700\u57280:00-6:00\u5165\u4F4F\uFF0C\u5165\u4F4F\u65E5\u671F\u8BF7\u9009\u62E9\u524D1\u5929\u3002
+tb.ratePlanAdd=\u7279\u4EF7\u4F18\u60E0+\u5168\u989D\u9884\u4ED8+\u65E0\u65E9
+credit.tb.ratePlanName=\u4FE1\u7528\u4F4F+\u7279\u4EF7\u4F18\u60E0
 
 zh.day=60
