--- a/fanqie-toms/trunk/src/main/resources/data.properties
+++ b/fanqie-toms/trunk/src/main/resources/data.properties
@@ -4,3 +4,6 @@ tb.ratePlanAdd=\u7279\u4EF7\u4F18\u60E0+\u5168\u989D\u9884\u4ED8+\u65E0\u65E9
 credit.tb.ratePlanName=\u4FE1\u7528\u4F4F+\u7279\u4EF7\u4F18\u60E0
 
 zh.day=60
+
+
+xi.lv.html=<div class="manual-order1"> <div class="manual-order-icon"> <ul> <Li ms-click="divDisplayFun"> <dl> <dd> <dl class="gongneng-icon"> {iconCoffee}</i> </dl> </dd> <dd class="other-pay-manage">\u5176\u5B83\u6D88\u8D39\u7BA1\u7406</dd></dl> </Li> </ul> </div></div>
