--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
             <id>nexus</id>
             <layout>default</layout>
             <name>nexus</name>
-            <url>http://repo.fanqielaile.com/content/groups/public/</url>
+            <url>http://repo.afanqie.cn/content/groups/public/</url>
         </repository>
         <repository>
             <id>spring-maven-release</id>
@@ -37,7 +37,7 @@
         <pluginRepository>
             <id>plugin repository</id>
             <name>plugin repository</name>
-            <url>http://repo.fanqielaile.com/content/groups/public/</url>
+            <url>http://repo.afanqie.cn/content/groups/public/</url>
         </pluginRepository>
         <pluginRepository>
             <id>spring-maven-release</id>
