--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
         </pluginRepository>
     </pluginRepositories>
     <dependencies>
+        <!--去哪儿-->
+        <dependency>
+            <groupId>com.fanqie.qunar</groupId>
+            <artifactId>qunar</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-frontend-jaxws</artifactId>
