--- a/src/main/resources/data.properties
+++ b/src/main/resources/data.properties
@@ -7,3 +7,5 @@ zh.day=60
 
 
 xi.lv.html=<div class="manual-order1"> <div class="manual-order-icon"> <ul> <Li ms-click="divDisplayFun"> <dl> <dd> <dl class="gongneng-icon"> {iconCoffee}</i> </dl> </dd> <dd class="other-pay-manage">\u5176\u5B83\u6D88\u8D39\u7BA1\u7406</dd></dl> </Li> </ul> </div></div>
+
+credit.switch.room=2016-04-29,2016-04-30,2016-05-01,2016-05-02
